cmake_minimum_required(VERSION 3.29)
project(module02)

set(CMAKE_CXX_STANDARD 23)

add_executable(exercise01 exercise01.cpp employee.h employee.cpp)
add_executable(exercise02 exercise02.cpp employee.h employee.cpp)
add_executable(exercise03 exercise03.cpp employee.h employee.cpp)
add_executable(exercise04 exercise04.cpp employee.h employee.cpp)
add_executable(exercise05 exercise05.cpp employee.h employee.cpp)
add_executable(exercise06 exercise06.cpp employee.h employee.cpp)
