cmake_minimum_required(VERSION 3.29)
project(module06)

set(CMAKE_CXX_STANDARD 23)

add_executable(exercise01 exercise01.cpp)
add_executable(exercise02 exercise02.cpp)
add_executable(exercise03 exercise03.cpp employee.h employee.cpp)
add_executable(exercise04 exercise04.cpp employee.h employee.cpp)
add_executable(exercise05 exercise05.cpp)
add_executable(exercise06 exercise06.cpp)
add_executable(exercise07 exercise07.cpp)
add_executable(exercise08 exercise08.cpp employee.h employee.cpp)
add_executable(world-exercise01 world-exercises/exercise01.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise01-ranges world-exercises/exercise01-ranges.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise02 world-exercises/exercise02.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise02-ranges world-exercises/exercise02-ranges.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise03 world-exercises/exercise03.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise03-ranges world-exercises/exercise03-ranges.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise04 world-exercises/exercise04.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise04-ranges world-exercises/exercise04-ranges.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise05 world-exercises/exercise05.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise06 world-exercises/exercise06.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise07 world-exercises/exercise07.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)
add_executable(world-exercise08 world-exercises/exercise08.cpp world-exercises/city.h world-exercises/city.cpp world-exercises/country.h world-exercises/country.cpp world-exercises/world-util.h world-exercises/world-util.cpp)

